--- a/angular.json
+++ b/angular.json
@@ -78,7 +78,10 @@
           }
         },
         "deploy": {
-          "builder": "angular-cli-ghpages:deploy"
+          "builder": "angular-cli-ghpages:deploy",
+          "options": {
+            "repo": "https://github.com/Nanyria/angular-frontEndLibrary.git"
+          }
         }
       }
     }
