--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@builder.io/sdk-angular": "^0.2.17",
     "concurrently": "^9.0.1",
     "express": "^4.18.2",
+    "gh-pages": "^6.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
