--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,19 @@
     "lib": [
       "ES2022",
       "dom"
+    ],
+    "typeRoots": ["node_modules/@types"],
+    "types": [
+      "bonjour",
+      "estree",
+      "jasmine",
+      "json-schema",
+      "mute-stream",
+      "node",
+      "range-parser",
+      "send",
+      "serve-static",
+      "wrap-ansi"
     ]
   },
   "angularCompilerOptions": {
