--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@angular/router": "^18.2.7",
     "@angular/ssr": "^18.2.7",
     "@builder.io/dev-tools": "^1.1.23",
-    "@builder.io/sdk-angular": "^0.2.17",
     "concurrently": "^9.0.1",
     "express": "^4.18.2",
     "gh-pages": "^6.2.0",
@@ -37,9 +36,17 @@
     "@angular-devkit/build-angular": "^18.2.7",
     "@angular/cli": "^18.2.7",
     "@angular/compiler-cli": "^18.2.7",
+    "@types/bonjour": "^3.5.13",
+    "@types/estree": "^1.0.6",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
-    "@types/node": "^18.18.0",
+    "@types/json-schema": "^7.0.15",
+    "@types/mute-stream": "^0.0.4",
+    "@types/node": "^18.19.56",
+    "@types/range-parser": "^1.2.7",
+    "@types/send": "^0.17.4",
+    "@types/serve-static": "^1.15.7",
+    "@types/wrap-ansi": "^8.0.2",
     "angular-cli-ghpages": "^2.0.1",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
