--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "gh-pages": "^6.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "uuid": "^10.0.0",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
@@ -47,6 +48,7 @@
     "@types/range-parser": "^1.2.7",
     "@types/send": "^0.17.4",
     "@types/serve-static": "^1.15.7",
+    "@types/uuid": "^10.0.0",
     "@types/wrap-ansi": "^8.0.2",
     "angular-cli-ghpages": "^2.0.1",
     "jasmine-core": "~5.1.0",
