Refactor library component structure and enhance user interface
- Updated book-table component to use new event for status updates.
- Changed book model import to use interfaces for better type management.
- Removed unused header component styles and HTML.
- Enhanced library component styles for better layout and responsiveness.
- Improved search component styles and functionality.
- Refactored login component for better user experience and error handling.
- Added user page component to manage user actions and display borrowed/reserved books.
- Implemented authentication service with token management.
- Created library service for book-related API interactions.
- Established user actions service for borrowing and reserving books.
- Introduced navigation component for better routing and user navigation.
- Added CSS variables for consistent theming across components.

--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/platform-server": "^18.2.7",
     "@angular/router": "^18.2.7",
     "@angular/ssr": "^18.2.7",
-    "@builder.io/dev-tools": "^1.1.23",
-    "@builder.io/sdk-angular": "^0.2.17",
-    "concurrently": "^9.0.1",
+    "@builder.io/dev-tools": "^1.6.48",
+    "@builder.io/sdk-angular": "^0.2.27",
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "concurrently": "^9.1.2",
     "express": "^4.18.2",
     "gh-pages": "^6.2.0",
     "rxjs": "~7.8.0",
